@@ -23,8 +23,8 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.StringReader;
-import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -92,12 +92,9 @@ public class MCREntityResolver implements EntityResolver2, LSResourceResolver {
 
     private static boolean isAbsoluteURL(String url) {
         try {
-            URL baseHttp = new URL("http://www.mycore.org");
-            URL baseFile = new URL("file:///");
-            URL relativeHttp = new URL(baseHttp, url);
-            URL relativeFile = new URL(baseFile, url);
-            return relativeFile.equals(relativeHttp);
-        } catch (MalformedURLException e) {
+            URI testUri = new URI(url);
+            return testUri.isAbsolute();
+        } catch (URISyntaxException e) {
             return false;
         }
     }
